update flow ticket
